--- a/local/templates/main/components/bitrix/news.list/certificates-activate/style.css
+++ b/local/templates/main/components/bitrix/news.list/certificates-activate/style.css
@@ -29,7 +29,7 @@
 .form-body {
   margin: 56px 0 90px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
 }
 .form-active-sert .form-path {
