--- a/local/components/addamant/certificates.buy/templates/.default/style.css
+++ b/local/components/addamant/certificates.buy/templates/.default/style.css
@@ -43,6 +43,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 label:has(input:checked) {
@@ -105,6 +106,7 @@ label:has(input:checked) {
   border: 1px solid black;
   gap: 34px;
   min-height: 301px;
+  position: relative;
 }
 
 .format__electro {
@@ -176,6 +178,7 @@ label:has(input:checked) {
 
 .design label {
   border: none;
+  position: relative;
 }
 
 .design label img {
@@ -408,6 +411,11 @@ label:has(input:checked) {
 .summ__item.all {
   padding-top: 24px;
   border-top: 1px solid black;
+}
+
+input.visually-hidden {
+  top: 0;
+  left: 0;
 }
 
 @media (max-width: 1000px) {
