--- a/local/components/naturalist/certificates.index/templates/.default/style.css
+++ b/local/components/naturalist/certificates.index/templates/.default/style.css
@@ -63,7 +63,7 @@
   width: 100%;
 }
 
-.certificates_index__header-preview-background > img {
+.certificates_index__header-preview-background img {
   width: 100%;
   height: 100%;
   object-fit: cover;
