--- a/local/templates/main/components/bitrix/news.list/certificates-activate/style.css
+++ b/local/templates/main/components/bitrix/news.list/certificates-activate/style.css
@@ -198,6 +198,10 @@
   }
   .form-active-sert .form-path:first-child {
     flex-wrap: wrap;
+    gap: 15px;
+  }
+  .get-code {
+    width: 100%;
   }
   .form-active-sert .form-path:first-child .form-input-wrap {
     max-width: 100%;
