--- a/local/templates/main/assets/css/certpdf.css
+++ b/local/templates/main/assets/css/certpdf.css
@@ -1,12 +1,18 @@
+@page {
+  margin: 0;
+}
+
 .order-pdf__line {
   height: 1px;
-  width: 100%;
+  width: 0;
   background-color: #000000;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .order-pdf__logo {
   margin-bottom: 13px;
-  margin-top: 20px;
+  padding-top: 50px;
   text-align: center;
 }
 
@@ -22,9 +28,11 @@
 }
 
 .order-pdf__block1 {
-  margin-top: 150px;
+  margin-top: 120px;
   padding-bottom: 35px;
-  min-height: 420px;
+  min-height: 400px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .order-pdf__congrats {
@@ -52,7 +60,8 @@
   padding-top: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid black;
-  width: 350px;
+  border-top: 1px solid black;
+  width: 370px;
 }
 
 .info__cert span {
@@ -66,6 +75,8 @@
   font-size: 16px;
   line-height: 16px;
   padding-top: 10px;
+  padding-bottom: 11.4px;
+  border-bottom: 1px solid black;
 }
 
 .info__contacts a {
@@ -78,18 +89,23 @@
   font-size: 10px;
   line-height: 10px;
   text-align: center;
-  padding: 15px 5px 15px 15px;
+  padding: 15px 0 15px 15px;
   border-left: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .info__1 {
   float: left;
+  padding-left: 30px;
 }
 
 .info__2 {
   float: right;
+  margin-right: 30px !important;
+  padding-right: 15px;
 }
 
 .cert__image {
-  height: 800px;
+  height: 830px;
 }
