--- a/local/templates/main/assets/css/certpdf.css
+++ b/local/templates/main/assets/css/certpdf.css
@@ -36,7 +36,7 @@
 }
 
 .order-pdf__congrats {
-  font-family: "gogol";
+  font-family: "gogol2";
   font-size: 30px;
   line-height: 41px;
   text-align: center;
