--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -464,4 +464,9 @@ h1.page_title {
   .cert-index__reviews {
     margin-top: 32px;
   }
+
+  .objects__list .swiper-button-next,
+  .objects__list .swiper-button-prev {
+    display: none !important;
+  }
 }
