--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -3649,3 +3649,14 @@
   align-items: center;
   margin-bottom: 15px;
 }
+
+.room__variant-text {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-direction: row-reverse;
+}
+
+.room__variant-text b {
+  flex-shrink: 0;
+}
