--- a/local/templates/main/components/bitrix/news.list/impressions_slider/style.css
+++ b/local/templates/main/components/bitrix/news.list/impressions_slider/style.css
@@ -8,6 +8,10 @@
     padding-top: 7.6rem;
 }
 
+.impressions-slider.container .swiper-container{
+    max-height: 373px;
+}
+
 .impressions-slider.container .impressions-slider__wrap{
     position: relative;
 }
@@ -44,6 +48,7 @@
     text-align: center;
     font-size: 18px;
     list-style: none;
+    max-height: 373px;
 }
 
 .impressions-slider .list__item-image {
@@ -61,7 +66,13 @@
     font-size: 28px;
     line-height: 36px;
     font-weight: 700;
+    transition: 0.3s;
 }
+
+.impressions-slider a:hover .list__item-title{
+    color: var(--color-orange);
+}
+
 .impressions-slider .swiper-button-prev,
 .impressions-slider .swiper-button-next {
     position: absolute;
@@ -122,7 +133,7 @@
         margin-left: var(--container-gap);;
     }
 
-    .impressions-slider__title span.all-link{
+    .impressions-slider__title a.all-link{
         display: none;
     }
 
