--- a/local/templates/main/components/bitrix/news.list/main_location/style.css
+++ b/local/templates/main/components/bitrix/news.list/main_location/style.css
@@ -151,14 +151,26 @@
 @media (max-width: 620px) {
     .location__group{
         grid-template-columns: repeat(1, 1fr);
+        gap: 12px;
     }
 
     .location__title-wrap>a{
         display: none;
     }
 
+    .location__item img{
+        width: 40px;
+        height: 40px;
+    }
+
+    .location__item-name{
+        font-size: 14px;
+        line-height: 20px;
+    }
+
     .location__wrapper .btn-all{
         display: block;
+        margin-top: 16px;
     }
 }
 
